# limes-vitae

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  compile-commands.json  limes-vitae.code-workspace
data/modules/core/: manifest.yaml
data/modules/core/assets/game-objects/: lolol.yaml  test.yaml  test1.yaml  test2.yaml  test3.yaml  test4.yaml
data/modules/core/assets/ui/: chat.rml  debug.rml  menu.rml  mod-option-list.rml  style.rcss  tests.rml
data/modules/core/defs/: client.yaml  engine.yaml
data/modules/test-mod/: manifest.yaml
data/modules/test-mod/assets/game-objects/: test-ship.yaml
rerun/: debug-move.rrd  debug-rot.rrd
scripts/: deploy.sh
src/client/: CMakeLists.txt  limes-client.cpp  limes-client.hpp  main.cpp
src/server/: CMakeLists.txt  limes-server.cpp  limes-server.hpp  main.cpp
